<resources>
    <string name="app_name">Movie Database</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username:</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email:</string>
    <string name="sign_up_bt">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_movie_ratings">Enter Movie Ratings</string>
    <string name="enter_movie_year">Enter Movie Year</string>
    <string name="enter_movie_genre">Enter Movie Genre</string>
    <string name="enter_movie_name">Enter Movie Name</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="go_back">Go Back</string>
</resources>