<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/et_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/enter_movie_name"/>

    <EditText
        android:id="@+id/et_movie_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/enter_movie_genre"/>

    <EditText
        android:id="@+id/et_movie_ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/enter_movie_ratings"/>

    <EditText
        android:id="@+id/et_movie_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/enter_movie_year"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"/>

    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete"/>

    <Button
        android:id="@+id/go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Go Back"/>

</LinearLayout>
